Added deactivation feature for firefox extension if tab's url doesn't match.

--- a/firefox/manifest.json
+++ b/firefox/manifest.json
@@ -8,8 +8,7 @@
         "tabs",
         "webNavigation",
         "storage",
-        "http://*/*",
-        "https://*/*"
+        "*://github.com/*"
     ],
     "background": {
         "scripts": ["scripts/background.js"]
