Some changes in build-build tool and scripts.:art:

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "test": "echo \"Nothing to test\"",
     "chrome": "node build.js chrome",
     "firefox": "node build.js firefox",
-    "fox-run": "node build.js firefox && cd target/firefox/ && web-ext run",
+    "fox": "node build.js firefox && cd target/firefox/ && web-ext run",
     "pack-chrome": "npm run chrome && node pack.js chrome",
     "pack-firefox": "npm run firefox && node pack.js firefox",
     "pack-ext": "npm run pack-chrome && npm run pack-firefox"
