--- a/ff-manifest.json
+++ b/ff-manifest.json
@@ -15,7 +15,7 @@
     },
     "applications": {
         "gecko": {
-          "id": "temporar@mail.com",
+          "id": "support@oxygenxml.com",
           "strict_min_version": "42.0"
         }
     },
