--- a/gc-manifest.json
+++ b/gc-manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "Oxygen XML Web Author",
-    "short_name": "Web Author",
+    "name": "Edit with Oxygen XML Web Author",
+    "short_name": "Edit with Web Author",
     "description": "The XML editor that helps your whole team engage in content creation",
     "version": "0.01",
     "manifest_version": 2,
